# polyglot

./: .gitignore  CONTRIBUTING.md  DATA.md  MANIFEST.in  README.md  SECURITY.md  __init__.py  package.json  plugin.yaml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: language-correction.yml
.github/workflows/: ci.yml
demo/: SCRIPTS.md  polyglot-launch.tape
demo/lib/: claude_session.py  record_env.sh
extensions/: polyglot.ts
hooks/: hooks.json
polyglot/: __init__.py  __main__.py  ambient.py  app.py  cli.py  hermes.py  learning_store.py  platform.py  review.py  safety.py  scheduler.py  storage.py
polyglot/data/: __init__.py  content_loader.py  content_v2.py  pair_ar_en.py  pair_de_en.py  pair_en_am.py  pair_en_ar.py  pair_en_bg.py  pair_en_bn.py  pair_en_ca.py  pair_en_cs.py  pair_en_cy.py  pair_en_da.py  pair_en_de.py  pair_en_el.py  pair_en_eo.py  pair_en_es.py  pair_en_fa.py  pair_en_fi.py  pair_en_fr.py  pair_en_ga.py  pair_en_gu.py  pair_en_he.py  pair_en_hi.py  pair_en_hr.py  pair_en_hu.py  pair_en_id.py  pair_en_is.py  pair_en_it.py  pair_en_ja.py  pair_en_ko.py  pair_en_la.py  pair_en_ml.py  pair_en_mr.py  pair_en_ms.py  pair_en_nl.py  pair_en_no.py  pair_en_pa.py  pair_en_pl.py  pair_en_pt.py  (+34 more)
polyglot/screens/: __init__.py  grid.py  installer_screen.py  pair_detail.py
polyglot/skill/: __init__.py  cadence.py  config.py  hook.py  phrase_picker.py
polyglot/ui/: __init__.py  widgets.py
protocol/: ambient-companion-v1.example.json  ambient-companion-v1.schema.json
scripts/: ambient.py  check_wheel_install.py
site/: README.md  package-lock.json  package.json  vite.config.ts
site/.openai/: hosting.json
site/app/: globals.css  layout.tsx  page.tsx
site/db/: index.ts
site/pagecast/: index.html  manifest.json
site/tests/: rendered-html.test.mjs
skills/polyglot/: SKILL.md
skills/polyglot/agents/: openai.yaml
tests/: test_cli.py  test_hermes_adapter.py  test_host_adapters.py  test_host_hardening.py  test_installer_screen.py  test_learning.py  test_pagecast_static.py  test_polyglot_app.py  test_polyglot_data.py  test_polyglot_hook.py  test_protocol_contract.py  test_real_hosts.py
